--- a/app.css
+++ b/app.css
@@ -56,6 +56,9 @@ body {
   .navbar form {
     justify-content: center;
   }
+  #bootstrap-override .aTagContrib {
+    display: grid;
+  }
 }
 /* btn */
 .menu {
