--- a/app.css
+++ b/app.css
@@ -417,6 +417,11 @@ font-weight: 600;
 .datalchemyFooter {
   background: black;
   color: white;
+  font-size: 0.7rem;
+}
+.datalchemyFooter p {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
 }
 
 .copyrightLine {
