--- a/mission.css
+++ b/mission.css
@@ -70,3 +70,9 @@
   font-family: 'Coustard', serif;
   /* font-size: 1.5rem; */
 }
+
+#chartdiv {
+  width: 100%;
+  height: 500px;
+  justify-content: center;
+}
