--- a/app.css
+++ b/app.css
@@ -20,8 +20,8 @@ body {
 
 .bckgImg {
   box-shadow: 0px 16px 28px 13px #151617;
-  filter: blur(8px);
-  -webkit-filter: blur(8px);
+  filter: opacity(0.5);
+  -webkit-filter: opacity(0.5);
   z-index: -100;
 }
 
@@ -46,6 +46,14 @@ body {
   border-radius: 12px;
   background: rgba(255,96,92,0.9);
   border-color: rgba(255,96,92,0.9);
+  color: white;
+  letter-spacing: 1.5px;
+
+}
+.submit-button {
+  border-radius: 12px;
+  background: rgba(4,59,53);
+  border-color: rgba(4,59,53);
   color: white;
   letter-spacing: 1.5px;
 
@@ -235,8 +243,8 @@ body {
   }
   .bckgImg {
     box-shadow: 0px 16px 28px 13px #151617;
-    filter: blur(4px);
-    -webkit-filter: blur(4px);
+    filter: opacity(0.5);
+    -webkit-filter: opacity(0.5);
     z-index: -100;
   }
 }
